--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <style type="text/css">
       body {margin: 0; padding: 0;}
       iframe {
-              overflow:hidden;
+              /*overflow:hidden;
               overflow-x:hidden;
-              overflow-y:hidden;
+              overflow-y:hidden;*/
               height:100%;
               width:100%;
               position:absolute;
